--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,7 @@ jobs:
           git config --global user.email 'kygoho@live.com'
           cd public
           git init
+          git checkout -b main
           git add .
           git commit -m "Deploy Hexo site"
           git push --force "https://${{ secrets.MY_TOKEN }}@github.com/eddiehex/eddiehex.github.io.git" main:main
