分页样式修改；移除archieve的分页限制

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,10 @@ deploy:
   repo: https://github.com/eddiehex/eddiehex.github.io.git
   branch: gh-pages
 
-  
-  
+archive_generator:
+  per_page: 0
+  yearly: true
+  monthly: true
+
 highlight:
   enable: false
