feat: update blog branding and fix category accordion overflow

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Shark Blog
-subtitle: A minimalist geek theme
-description: A clean and minimalist blog theme for geeks
+subtitle: Land of Sharks
+description: Diving into the world of tech and beyond
 author: Eddie Ho
 
 # URL
